<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Evenements">

        <TextView
            android:id="@+id/textEvenements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/even"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/layoutTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textEvenements"
            tools:layout_editor_absoluteX="175dp">

            <TableRow
                android:id="@+id/tabArrivee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/buttonArrivee"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arrivee"
                    android:background="@drawable/rounded_corner"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="442dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/textHoraireArriv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:layout_editor_absoluteX="123dp"
                    tools:layout_editor_absoluteY="516dp"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:id="@+id/tabOpe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/buttonOpe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ope"
                    android:background="@drawable/rounded_corner"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="442dp"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/textHoraireOpe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:layout_editor_absoluteX="123dp"
                    tools:layout_editor_absoluteY="516dp"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/SAMU"
                    tools:layout_editor_absoluteX="123dp"
                    tools:layout_editor_absoluteY="516dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/buttonSamu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/oui"
                    android:background="@drawable/rounded_corner"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="442dp"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:id="@+id/tabOrga"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp" >

                <Button
                    android:id="@+id/buttonOrga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/orga"
                    android:background="@drawable/rounded_corner"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="442dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/textHoraireOrga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:layout_editor_absoluteX="123dp"
                    tools:layout_editor_absoluteY="516dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textLigne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ligne"/>

            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/layoutTab1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutTab"
            tools:layout_editor_absoluteX="175dp">

            <TableRow
                android:id="@+id/tabDBinom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp" >

                <Button
                    android:id="@+id/buttonDBinom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dbin"
                    android:background="@drawable/rounded_corner"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="442dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/textHoraireDBinom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:layout_editor_absoluteX="123dp"
                    tools:layout_editor_absoluteY="516dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/buttonValDBinom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/Valider"
                    android:background="@drawable/rounded_corner"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="442dp"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:id="@+id/tabRBinom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp" >

                <Button
                    android:id="@+id/buttonRBinom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rbin"
                    android:background="@drawable/rounded_corner"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="442dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/textHoraireRBinom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:layout_editor_absoluteX="123dp"
                    tools:layout_editor_absoluteY="516dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/buttonValRBinom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/Valider"
                    android:background="@drawable/rounded_corner"
                    tools:layout_editor_absoluteX="91dp"
                    tools:layout_editor_absoluteY="442dp"
                    android:layout_weight="1" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/buttonVictime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/victime"
            android:background="@drawable/rounded_corner"
            app:layout_constraintTop_toBottomOf="@+id/layoutTab1"
            tools:layout_editor_absoluteX="91dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>